[gd_scene load_steps=8 format=3 uid="uid://bqg857kj66w2r"]

[ext_resource type="Script" path="res://scenes/ui/sripts/esc_menu.gd" id="1_4ioew"]
[ext_resource type="Texture2D" uid="uid://b7cwcuwrowlb" path="res://resources/textures/ESC_bg.png" id="2_mm30j"]
[ext_resource type="Texture2D" uid="uid://b14tu38mq1uo3" path="res://resources/textures/button_idle.png" id="3_f1fr2"]
[ext_resource type="Texture2D" uid="uid://dx234ps1r3s3i" path="res://resources/textures/button_pressed.png" id="4_yexv4"]
[ext_resource type="Texture2D" uid="uid://cljjmhx34x5rh" path="res://resources/textures/button_focused.png" id="5_ed0tf"]

[sub_resource type="LabelSettings" id="LabelSettings_nxtrx"]
font_size = 46

[sub_resource type="LabelSettings" id="LabelSettings_64u6f"]
font_size = 60

[node name="Esc_Menu" type="CanvasLayer"]
script = ExtResource("1_4ioew")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_mm30j")
expand_mode = 1

[node name="Resume" type="TextureButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -217.0
offset_right = 348.0
offset_bottom = -107.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_f1fr2")
texture_pressed = ExtResource("4_yexv4")
texture_hover = ExtResource("5_ed0tf")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Resume"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Resume"
label_settings = SubResource("LabelSettings_nxtrx")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Settings" type="TextureButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -30.0
offset_right = 348.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_f1fr2")
texture_pressed = ExtResource("4_yexv4")
texture_hover = ExtResource("5_ed0tf")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Settings"
label_settings = SubResource("LabelSettings_nxtrx")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Exit" type="TextureButton" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.193
anchor_right = 0.5
anchor_bottom = 1.193
offset_left = -350.0
offset_top = -563.44
offset_right = 348.0
offset_bottom = -453.44
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_f1fr2")
texture_pressed = ExtResource("4_yexv4")
texture_hover = ExtResource("5_ed0tf")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Exit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"
label_settings = SubResource("LabelSettings_nxtrx")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Label" type="Label" parent="."]
offset_left = 804.0
offset_top = 132.0
offset_right = 1125.0
offset_bottom = 258.0
text = "Pause"
label_settings = SubResource("LabelSettings_64u6f")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
uppercase = true

[connection signal="pressed" from="Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Resume" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_texture_button_pressed"]
